@@ -1,13 +1,13 @@
 #!perl
-#
+# 
 # This file is part of Config-Model-TkUI
-#
+# 
 # This software is Copyright (c) 2010 by Dominique Dumont.
-#
+# 
 # This is free software, licensed under:
-#
+# 
 #   The GNU Lesser General Public License, Version 2.1, February 1999
-#
+# 
 
 BEGIN {
   unless ($ENV{RELEASE_TESTING}) {
